--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <li><a href="#sec1">Servicios</a></li>
                 <li><a href="#project">Proyectos</a></li>
                 <li><a href="#tec">Tecnología</a></li>
+                <li><a href="#tec">Mi blog</a></li>
+                <li><a href="portfolio/index.html">Portafolio</a></li>
                 <li><a href="#contac">Contacto</a></li>
                 <li><a href="#contac">Acerca de</a></li>
               </ul>
