--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#tec">Tecnología</a></li>
                 <li><a href="#">Mi blog</a></li>
                 <li><a href="https://biblio-mc.blogspot.com/p/libros.html" target="_blank">Libros</a></li>
-                <li><a href="portfolio/index.html">Portafolio</a></li>
+                <li><a href="portfolio/portfolio.html">Portafolio</a></li>
                 <li><a href="#contac">Contacto</a></li>
                 <li><a href="#contac">Acerca de</a></li>
               </ul>
