--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-          <nav class="navbar">
+          <nav class="navbar hide">
             <div class="navbarm">
               <div class="logo">
                 <img src="img/logo.png" alt="">
