add social links

--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#sec1">Servicios</a></li>
                 <li><a href="#project">Proyectos</a></li>
-                <li><a href="#tec">Tecnología</a></li>
+                <!-- <li><a href="#tec">Tecnología</a></li> -->
                 <li><a href="#">Mi blog</a></li>
                 <li><a href="https://biblio-mc.blogspot.com/p/libros.html" target="_blank">Libros</a></li>
-                <li><a href="portfolio/portfolio.html">Portafolio</a></li>
+                <li><a href="portfolio/portfolio.html" target="_blank">Portafolio</a></li>
                 <li><a href="#contac">Contacto</a></li>
                 <li><a href="#contac">Acerca de</a></li>
               </ul>
               
               <div class="search-container">
+                <a href="https://www.facebook.com" target="_blank"> <i class="bx bxl-facebook"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com" target="_blank"><i class="bx bxl-linkedin"></i></a>
                 <div class="search">
                    <input type="text" class="searchTerm" placeholder="Buscar">
                    <button type="submit" class="searchButton">
@@ -55,7 +59,7 @@
             <div class="banner">
               <div class="home-text">
                 <h1>Empresa constructora CING</h1>
-                <h2>Servicio de ingeniería y asesoramiento en proyectos de construcción. </h2>
+                <h2>Obras civiles, cálculos estructurales, supervision y construcción. Arquitectura, avaluos inmobiliarios, diseño de interiores, mobiliario, paisajismo.</h2>
               </div>
             </div>
         </section>
@@ -64,6 +68,7 @@
                 <h1>Servicios</h1>
             </div>
             <div class="container">
+                <!-- Servicio 2 --> 
                 <div class="serv1">
                     <div id="img">
                       <div class="imges">
@@ -134,60 +139,51 @@
             </div>
        </section>
         <section id="project">
-            <h1>Servicios</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates cumque porro temporibus, eum, ullam dolorem tenetur fugiat natus alias unde sequi est vel! Enim quibusdam vitae minima repudiandae magnam. Omnis.</p>
-        </section>
-        <section id="tec">
             <h1>Proyectos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium facilis harum eum, quia mollitia veniam temporibus quidem, magni similique suscipit nostrum consequatur quasi, fugit perspiciatis voluptates sapiente iste incidunt?</p>
-        </section>
-        <section id="contac">
-            <h1>Tecnologia</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iure ratione quisquam quos ducimus, numquam voluptatem odio, aliquid adipisci distinctio placeat assumenda qui doloremque nam deserunt nemo, atque vero ut?</p>
-        </section>
-        <section>
-            <h1>Contacto</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore magnam eaque, eius quam veniam officiis deserunt necessitatibus quas dolor aspernatur consequuntur perferendis alias. Animi sequi odio eum. Voluptatem, at?</p>
+            <div class="project-container">
+              <div class="projects">
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+                  <h3>Seamlessly visualize quality</h3>
+                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+              </div>
+            </div>
         </section>
         <footer>
-            <div class="social">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
+            <div class="contact">
+              <a href="#"><i class="bx bxl-whatsapp"></i></a>
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+              <a href="#"><i class="bx bxl-instagram"></i></a>
+              <a href="#"><i class="bx bxl-linkedin"></i></a>
             </div>
             <p class="end">CopyRight By Mario Cesgo Soliz</p>
         </footer>
-
-         <!---------- MODAL ------------>
-    <div id="modalContact" class="modal">
-    <div id="flex" class="flex">
-      <div class="contenidoModal">
-        <div class="modalHeader flex">
-          <h2>Contactanos a traves de:</h2>
-          <span class="cerrar" id="cerrar">&times;</span>
-        </div>
-        <div class="modalBody">
-          <div class="formascontainer">
-            <div class="formaContacto">
-              <img src="img/icons/message.svg" alt="">
-              <h3>
-                <a href="https://www.messenger.com" target="_blank">Messenger</a>
-              </h3>
-            </div>
-            <div class="formaContacto">
-              <img src="img/icons/email.svg" alt="">
-              <h3>
-                <a href="https://mail.google.com/mail/u/0/" target="_blank">Email</a>
-              </h3>
-            </div>
-            <div class="formaContacto">
-              <img src="img/icons/message.svg" alt="">
-              <h3>
-                <a href="https://web.whatsapp.com" target="_blank">WhatsApp</a>
-              </h3>
-            </div>
-          </div>
-        </div>
         <script src="js/main.js"></script>
 
     </body>
