--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="img\logo1.png" rel="icon" type="image/png">
-        <title>CING</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
-        <script defer src="js/main.js/"></script>
-      </head>
-
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="img\logo1.png" rel="icon" type="image/png">
+      <title>CING</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/responsive.css">
+      <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+      <script defer src="js/main.js/"></script>
+    </head>
     <body>
+      <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
+        <i class="bx bxl-whatsapp"></i>
+      </button>
         <header>
           <nav class="navbar hide">
             <div class="navbarm">
@@ -26,10 +28,9 @@
                 <span class="br-3"></span>
               </div>
             </div>
-
             <div class="nav nav-menu-visible">
               <ul class="navbarli">
-                <li><a href="#">Inicio</a></li>
+                <li class="active"><a href="#">Inicio</a></li>
                 <li><a href="#sec1">Servicios</a></li>
                 <li><a href="#project">Proyectos</a></li>
                 <!-- <li><a href="#tec">Tecnología</a></li> -->
