--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <section>
             <div class="banner">
               <div class="home-text">
-                <h1>Empresa constructora CING</h1>
+                <h1>Empresa constructora <span>CING</span></h1>
+                <br>
                 <h2>Obras civiles, cálculos estructurales, supervision y construcción. Arquitectura, avaluos inmobiliarios, diseño de interiores, mobiliario, paisajismo.</h2>
               </div>
             </div>
