--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#sec1">Servicios</a></li>
                 <li><a href="#project">Proyectos</a></li>
                 <!-- <li><a href="#tec">Tecnología</a></li> -->
-                <li><a href="#">Mi blog</a></li>
+                <li><a href="blog/blog.html">Mi blog</a></li>
                 <li><a href="https://biblio-mc.blogspot.com/p/libros.html" target="_blank">Libros</a></li>
                 <li><a href="portfolio/portfolio.html" target="_blank">Portafolio</a></li>
                 <li><a href="#contac">Contacto</a></li>
@@ -139,24 +139,25 @@
                     </div>
                 </div>
             </div>
-       </section>
+        </section>
+      
         <section id="project">
             <h1>Proyectos</h1>
             <div class="project-container">
               <div class="projects">
                 <div class="proj-card">
-                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
-                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h1>Seamlessly visualize quality</h1>
+                  <a href="#" class="btn">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h1>Seamlessly visualize quality</h1>
+                  <a href="#" class="btn btn-primary btn-block">Here's why</a>
                 </div>
                 <div class="proj-card">
                   <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
-                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
-                </div>
-                <div class="proj-card">
-                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
+                  <h1>Seamlessly visualize quality</h1>
                   <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
                 </div>
                 <div class="proj-card">
