add libros html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#project">Proyectos</a></li>
                 <!-- <li><a href="#tec">Tecnología</a></li> -->
                 <li><a href="blog/blog.html">Mi blog</a></li>
-                <li><a href="https://biblio-mc.blogspot.com/p/libros.html" target="_blank">Libros</a></li>
+                <li><a href="libros.html" target="_blank">Libros</a></li>
                 <li><a href="portfolio/portfolio.html" target="_blank">Portafolio</a></li>
                 <li><a href="#contac">Contacto</a></li>
                 <li><a href="#contac">Acerca de</a></li>
