--- a/index.html
+++ b/index.html
@@ -65,80 +65,49 @@
               </div>
             </div>
         </section>
-        <section id="sec1">
+        <section id="services">
             <div class="titulo">
                 <h1>Servicios</h1>
             </div>
-            <div class="container">
-                <!-- Servicio 2 --> 
-                <div class="serv1">
-                    <div id="img">
-                      <div class="imges">
-                        <img src="img/desarrollo web.jpg" alt="">
-                      </div>
-                      <div class="name">
-                        <h3>Desarollo Web</h3>
-                      </div>
-                      <hr size="2px" width="100%" noshade="noshade" border-radius: "100%" />
-                    </div>
-                    <div class="text">
-                      <div class="parrafo">
-                        <p>Desarrollamos tu proyecto web y hacemos que se vea en cualquier dispositivo </p>
-                      </div>
-                    </div>
+            <!-- <div class="services-container"> -->
+              <div class="services">
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h1>Calculo estructural</h1>
+                  <a href="#" class="btn">Here's why</a>
                 </div>
-                <!-- Servicio 2 -->
-                <div class="serv2">
-                    <div id="img">
-                      <div class="imges">
-                        <img src="img/diseño grafico.gif" alt="">
-                      </div>
-                      <div class="name">
-                        <h3>Diseño Grafico</h3>
-                      </div>
-                      <hr size="2px" width="100%" noshade="noshade" border-radius: "100%" />
-                    </div>
-                    <div class="text">
-                      <div class="parrafo">
-                        <p>Ofrecemos diseños de logos, de paginas web y más.</p>
-                      </div>
-                    </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h1>Diseño y calculo estructural</h1>
+                  <a href="#" class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <!-- Servicio 3-->
-                <div class="serv3">
-                    <div id="img">
-                      <div class="imges">
-                        <img src="img/desarrollo de apps.jpg" alt="">
-                      </div>
-                      <div class="name">
-                        <h3>Desarollo de Apps</h3>
-                      </div>
-                      <hr size="2px" width="100%" noshade="noshade" border-radius: "100%" />
-                    </div>
-                    <div class="text">
-                      <div class="parrafo">
-                        <p>Desarrollamos Apps moviles y de escritorio</p>
-                      </div>
-                    </div>
-                 </div>
-                <!-- Servicio 4 -->
-                <div class="serv4">
-                    <div id="img">
-                      <div class="imges">
-                        <img src="img/haking.jpg" alt="">
-                      </div>
-                      <div class="name">
-                        <h3>Seguridad Informatica</h3>
-                      </div>
-                      <hr size="2px" width="100%" noshade="noshade" border-radius: "100%" />
-                    </div>
-                    <div class="text">
-                      <div class="parrafo">
-                        <p>Hacemos que tú empresa tenga una seguridad invulnerable</p>
-                      </div>
-                    </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h1>Supervición de obras civiles</h1>
+                  <a href="3 class="btn btn-primary btn-block">Here's why</a>
                 </div>
-            </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h3>Construcción</h3>
+                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h3>Consultoría</h3>
+                  <a href="#" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jpg" alt="Sample photo">
+                  <h3>Elaboración de proyectos</h3>
+                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+                <div class="proj-card">
+                  <img src="img/banner1.jp" alt="Sample photo">
+                  <h3>Diseño arquitectónico, interiores y paisajismo</h3>
+                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                </div>
+              </div>
+            <!-- </div> -->
         </section>
       
         <section id="project">
@@ -147,32 +116,22 @@
               <div class="projects">
                 <div class="proj-card">
                   <img src="img/banner1.jpg" alt="Sample photo">
-                  <h1>Seamlessly visualize quality</h1>
+                  <h1>Proyecto vivienda</h1>
                   <a href="#" class="btn">Here's why</a>
                 </div>
                 <div class="proj-card">
                   <img src="img/banner1.jpg" alt="Sample photo">
-                  <h1>Seamlessly visualize quality</h1>
+                  <h1>Construcción de residencial</h1>
                   <a href="#" class="btn btn-primary btn-block">Here's why</a>
                 </div>
                 <div class="proj-card">
                   <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h1>Seamlessly visualize quality</h1>
+                  <h1>Supervición de obras civiles</h1>
                   <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
                 </div>
                 <div class="proj-card">
                   <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
-                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
-                </div>
-                <div class="proj-card">
-                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
-                  <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
-                </div>
-                <div class="proj-card">
-                  <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-                  <h3>Seamlessly visualize quality</h3>
+                  <h3>Construcción</h3>
                   <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
                 </div>
               </div>
