--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/responsive.css">
       <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+      <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
       <script defer src="js/main.js/"></script>
     </head>
     <body>
@@ -31,7 +32,7 @@
             <div class="nav nav-menu-visible">
               <ul class="navbarli">
                 <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#sec1">Servicios</a></li>
+                <li><a href="#services">Servicios</a></li>
                 <li><a href="#project">Proyectos</a></li>
                 <!-- <li><a href="#tec">Tecnología</a></li> -->
                 <li><a href="blog/blog.html">Mi blog</a></li>
@@ -42,7 +43,7 @@
               </ul>
               
               <div class="search-container">
-                <a href="https://www.facebook.com" target="_blank"> <i class="bx bxl-facebook"></i></a>
+                <a href="https://www.facebook.com/cing.ingenieria" target="_blank"> <i class="bx bxl-facebook"></i></a>
                 <a href="https://www.twitter.com" target="_blank"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.instagram.com" target="_blank"><i class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -111,7 +112,9 @@
         </section>
       
         <section id="project">
+          <div class="titulo">
             <h1>Proyectos</h1>
+          </div>
             <div class="project-container">
               <div class="projects">
                 <div class="proj-card">
@@ -137,14 +140,31 @@
               </div>
             </div>
         </section>
-        <footer>
-            <div class="contact">
+        <section id="contact">
+          <div class="titulo">
+            <h1>Contactos</h1>
+          </div>
+          <div class="contact-container">
+            <div class="contact-card">
               <a href="#"><i class="bx bxl-whatsapp"></i></a>
-              <a href="#"><i class="bx bxl-facebook"></i></a>
-              <a href="#"><i class="bx bxl-instagram"></i></a>
-              <a href="#"><i class="bx bxl-linkedin"></i></a>
+              <h2>Whatsapp</h2>
+              <h3>+59174446236</h3>
             </div>
-            <p class="end">CopyRight By Mario Cesgo Soliz</p>
+            <div class="contact-card">
+              <a href="#"><i class="bx bxl-gmail"></i></a>
+              <h2>Gmail</h2>
+              <h3>mariocs855@gmail.com</h3>
+            </div>
+            <div class="contact-card">
+              <a href="#"><i class="bx bxl-linkedin"></i></a>
+              <h2>Telegram</h2>
+              <h3>Mario Cesgo Soliz</h3>
+            </div>
+          </div>
+        </section>
+        <footer>
+            <h2> © Copyright: <span>CING</span> all rights reserved</h2>
+            <h3>Powered by: Mario Cesgo Solis</h3>
         </footer>
         <script src="js/main.js"></script>
 
