--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
       <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
       <script defer src="js/main.js/"></script>
+      <script src="assets/jquery/jquery.min.js"></script>
     </head>
     <body>
       <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
@@ -72,37 +73,37 @@
             </div>
             <!-- <div class="services-container"> -->
               <div class="services">
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h1>Calculo estructural</h1>
                   <a href="#" class="btn">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h1>Diseño y calculo estructural</h1>
                   <a href="#" class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h1>Supervición de obras civiles</h1>
                   <a href="3 class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h3>Construcción</h3>
                   <a href="3" class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h3>Consultoría</h3>
                   <a href="#" class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jpg" alt="Sample photo">
                   <h3>Elaboración de proyectos</h3>
                   <a href="3" class="btn btn-primary btn-block">Here's why</a>
                 </div>
-                <div class="proj-card">
+                <div class="card">
                   <img src="img/banner1.jp" alt="Sample photo">
                   <h3>Diseño arquitectónico, interiores y paisajismo</h3>
                   <a href="3" class="btn btn-primary btn-block">Here's why</a>
@@ -111,7 +112,7 @@
             <!-- </div> -->
         </section>
       
-        <section id="project">
+        <!-- <section id="project">
           <div class="titulo">
             <h1>Proyectos</h1>
           </div>
@@ -139,7 +140,7 @@
                 </div>
               </div>
             </div>
-        </section>
+        </section> -->
         <section id="contact">
           <div class="titulo">
             <h1>Contactos</h1>
