--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
       <script defer src="js/main.js/"></script>
       <script src="assets/jquery/jquery.min.js"></script>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YK109W16L"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-1YK109W16L');
+      </script>
+
     </head>
     <body>
       <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
