--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
       <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
       <script defer src="js/main.js/"></script>
+      <script src="src/navbar.js"></script>
+      <script src="src/footer-copyrigth.js"></script>
       <script src="assets/jquery/jquery.min.js"></script>
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -29,45 +31,7 @@
         <i class="bx bxl-whatsapp"></i>
       </button>
         <header>
-          <nav class="navbar hide">
-            <div class="navbarm">
-              <div class="logo">
-                <img src="img/logo.png" alt="">
-                <h1> CING</h1>
-              </div>
-              <div class="pad">
-                <span class="br-1"></span>
-                <span class="br-2"></span>
-                <span class="br-3"></span>
-              </div>
-            </div>
-            <div class="nav nav-menu-visible">
-              <ul class="navbarli">
-                <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#project">Proyectos</a></li>
-                <!-- <li><a href="#tec">Tecnología</a></li> -->
-                <li><a href="blog/blog.html">Mi blog</a></li>
-                <li><a href="libros.html" target="_blank">Libros</a></li>
-                <li><a href="portfolio/portfolio.html" target="_blank">Portafolio</a></li>
-                <li><a href="#contac">Contacto</a></li>
-                <li><a href="#contac">Acerca de</a></li>
-              </ul>
-              
-              <div class="search-container">
-                <a href="https://www.facebook.com/cing.ingenieria" target="_blank"> <i class="bx bxl-facebook"></i></a>
-                <a href="https://www.twitter.com" target="_blank"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com" target="_blank"><i class="bx bxl-linkedin"></i></a>
-                <div class="search">
-                   <input type="text" class="searchTerm" placeholder="Buscar">
-                   <button type="submit" class="searchButton">
-                     <i class="bx bx-search"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </nav>
+          <nav-bar></nav-bar>
         </header>
         <section>
             <div class="banner">
@@ -174,11 +138,14 @@
             </div>
           </div>
         </section>
-        <footer>
-            <h2> © Copyright: <span>CING</span> all rights reserved</h2>
-            <h3>Powered by: Mario Cesgo Solis</h3>
+        <footer id="footer-info">
+          <footer-copyrigth></footer-copyrigth>
         </footer>
+
         <script src="js/main.js"></script>
+        <script src="src/navbar.js"></script>
+        <script src="src/footer-copyrigth.js"></script>
+
 
     </body>
     
