--- a/libros.html
+++ b/libros.html
@@ -17,9 +17,9 @@
     <script src="assets/jquery/jquery.min.js"></script>
   </head>
     <body>
-      <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
+      <!-- <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
         <i class="bx bxl-whatsapp"></i>
-      </button>
+      </button> -->
       <header>
         <nav-bar></nav-bar>
       </header>
