--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <script src="src/navbar.js"></script>
       <script src="src/footer-copyrigth.js"></script>
       <script src="assets/jquery/jquery.min.js"></script>
+      <!-- reveal scrolling -->
+      <script src="https://unpkg.com/scrollreveal"></script>
+
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YK109W16L"></script>
@@ -141,6 +144,20 @@
         <footer id="footer-info">
           <footer-copyrigth></footer-copyrigth>
         </footer>
+        <!-- scroll reveal -->
+        <script>
+          ScrollReveal({ 
+            reset: true,
+            distance:'60px',
+            duration: 1500,
+            delay: 100
+          });
+
+          ScrollReveal().reveal('.titulo', { delay: 200, origin: 'left' });
+          ScrollReveal().reveal('.card', { delay: 200 });
+          ScrollReveal().reveal('.contact-container', { delay: 200 });
+          ScrollReveal().reveal('.home-text', { delay: 200, origin: 'zoom'});
+        </script>
 
         <script src="js/main.js"></script>
         <script src="src/navbar.js"></script>
