--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
           ScrollReveal().reveal('.titulo', { delay: 200, origin: 'left' });
           ScrollReveal().reveal('.card', { delay: 200 });
-          ScrollReveal().reveal('.contact-container', { delay: 200 });
+          ScrollReveal().reveal('.contact-card', { delay: 200,origin: 'left', interval: 200});
           ScrollReveal().reveal('.home-text', { delay: 200, origin: 'zoom'});
         </script>
 
