--- a/index.html
+++ b/index.html
@@ -52,39 +52,60 @@
             <!-- <div class="services-container"> -->
               <div class="services">
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h1>Calculo estructural</h1>
-                  <a href="#" class="btn">Here's why</a>
+                  <img src="img/servicios/01.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Diseño y cálculo estructural</h1>
+                    <a href="#" class="btn">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h1>Diseño y calculo estructural</h1>
-                  <a href="#" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/02.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Modelado BIM</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h1>Supervición de obras civiles</h1>
-                  <a href="3 class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/03.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Supervición de obras civiles</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h3>Construcción</h3>
-                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/04.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Diseño geométrico de carreteras</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h3>Consultoría</h3>
-                  <a href="#" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/05.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Consultoría</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jpg" alt="Sample photo">
-                  <h3>Elaboración de proyectos</h3>
-                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/06.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Elaboración de proyectos</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>
+                  </div>
                 </div>
                 <div class="card">
-                  <img src="img/banner1.jp" alt="Sample photo">
-                  <h3>Diseño arquitectónico, interiores y paisajismo</h3>
-                  <a href="3" class="btn btn-primary btn-block">Here's why</a>
+                  <img src="img/servicios/07.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Diseño arquitectónico</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>  
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="img/servicios/08.jpg" alt="Sample photo">
+                  <div class="card-title">
+                    <h1>Desarrollo de sofware</h1>
+                    <a href="#" class="btn btn-primary btn-block">Más información</a>  
+                  </div>
                 </div>
               </div>
             <!-- </div> -->
@@ -125,17 +146,17 @@
           </div>
           <div class="contact-container">
             <div class="contact-card">
-              <a href="#"><i class="bx bxl-whatsapp"></i></a>
+              <a href="https://wa.me/59174446236" target="_blank"><i class="bx bxl-whatsapp"></i></a>
               <h2>Whatsapp</h2>
-              <h3>+59174446236</h3>
+              <h3>+591 74446236</h3>
             </div>
             <div class="contact-card">
-              <a href="#"><i class="bx bxl-gmail"></i></a>
+              <a href="mailto:mariocs855@gmail.com?body=Hola," target="_blank"><i class="bx bxl-gmail"></i></a>
               <h2>Gmail</h2>
               <h3>mariocs855@gmail.com</h3>
             </div>
             <div class="contact-card">
-              <a href="#"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/mario-cesgo-soliz-862600167/" target="_blank"><i class="bx bxl-linkedin"></i></a>
               <h2>Telegram</h2>
               <h3>Mario Cesgo Soliz</h3>
             </div>
